# The_Hofstadter_G_Sequence

./: CMakeLists.txt  main.cpp
src/: HGSequence.cpp  HGSequence.h
tests/: HGSequence_test.cpp
